newstroop.css
@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');

@media (prefers-color-scheme: dark) {

	body {
		background-color: #0a0a0a;
		color: #e0e0e0;
	}

	main {
		background-color: #0a0a0a;
		box-shadow: 0 0 0 #1f1f1f;
	}

	.randomNews div:hover {
		background-color: #ff5757;
		color: #FFFFFF;
	}
	
	.randomNews div {
		background-color: #FFFFFF;
		color: #1f1f1f;
	}

	a {
		color: #ff5757;
	}
	
	a:hover {
		color: #FFFFFF;
		text-decoration: none;
	}

	main h2 {
		color: #ff5757;
	}
	
	.card {
		transition: 0.1s;
	}

	.card:hover {
		background-color: #1f1f1f;
		box-shadow: 0 0 30px #1f1f1f;
	}

	.carddetails {
		color: #ffffff;
	}

	.carddetails h3 a {
		color: #e0e0e0;
	}
	
	.carddetails h3 a:hover {
		color: #ff5757;
	}

	.article .related h2 {
		color: #FFFFFF;
	}

}

@media (prefers-color-scheme: light) {

	body {
		background-color: #e0e0e0;
		color: #1f1f1f;
	}

	main {
		background-color: #FFFFFF;
		box-shadow: 0 0 30px #e2e2e2;
	}

	.randomNews div:hover {
		background-color: #ff5757;
		color: #FFFFFF;
	}
	
	.randomNews div {
		background-color: #1f1f1f;
		color: #FFFFFF;
	}

	a {
		color: #ff5757;
	}
	
	a:hover {
		color: #1f1f1f;
		text-decoration: none;
	}

	main h2 {
		color: #ff5757;
	}

	.card {
		border-color: #d3d3d3;
		background-color: #ffffff;
		transition: 0.1s;
		color: #ffffff;
	}

	.card:hover {
		background-color: #f3f3f3;
		box-shadow: 0 0 30px #c0c0c0;
	}
	
	.carddetails h3 a {
		color: #e0e0e0;
	}
	
	.carddetails h3 a:hover {
		color: #ff5757;
	}

	.article .related h2 {
		color: #1f1f1f;
	}

}

body {
	font-family: 'Open Sans', sans-serif;
	margin: 0;
	font-size: 3vw;
}

::-moz-selection { /* Code for Firefox */
  background: #ff5757;
  color: #FFFFFF;
}

::selection {
  background: #ff5757;
  color: #FFFFFF;
}

.textCenter {
	text-align: center;
}

header {
	font-family: 'Oswald', sans-serif;
	background-color: #1f1f1f;
	background-image: url("images/homebanner.jpg");
	background-position: center;
	background-repeat: no-repeat;
	width: 100%;
	color: #FFFFFF;
	padding-top: 10vw;
	padding-bottom: 8vw;
}

header img {
	width: 40vw;
	height: auto;
	margin: 2vw auto 3vw auto;
	display: block;
}

header h3 {
	text-align: center;
	margin-left: auto;
	margin-right: auto;
	margin-top: 0;
	padding-top: 2vw;
	font-size: 3vw;
	letter-spacing: 0.2vw;
	width: 60vw;
	border-top: solid;
	border-color: #ff5757;
	border-width: 1vw;
}

nav {
	height: 100%;
	width: 0;
	position: fixed;
	z-index: 1;
	top: 0;
	left: 0;
	background-color: #1f1f1f;
	overflow-x: hidden;
	padding-top: 15vw;
	transition: 0.3s;
	display: flex;
	flex-direction: column;
}

nav a {
	text-align: center;
	color: #FFFFFF;
	text-decoration: none;
	text-transform: uppercase;
	transition: 0.3s;
	font-weight: 900;
	padding-top: 3vw;
	padding-bottom: 3vw;
	font-size: 4vw;
}

nav img {
	display: none;
}

nav a:hover {
	background-color: #1f1f1f;
	color: #FFFFFF;
}

nav .closebtn {
  position: absolute;
  top: 5vw;
  right: 5vw;
  font-size: 7vw;
  padding: 0;
}

.navbutton {
	display: flex;
	background-color: #1f1f1f;
	position: -webkit-sticky; /* Safari */
	position: sticky;
	top: 0;
	height: 12vw;
	color: #FFFFFF;
	padding: 2vw;
	padding-left: 6vw;
}

.navbutton span {
	font-size: 8vw;
	cursor:pointer;
}

main {
	padding: 5vw;
}

main h2 {
	font-family: 'Oswald', sans-serif;
	letter-spacing: 0.15vw;
	margin-top: 0;
}

.randomNews {
	cursor: pointer;
	color: #FFFFFF;
	text-decoration: none;
	text-align: center;
	text-transform: uppercase;
	font-size: 20px;
	font-weight: bold;
	transition: 0.3s;
	width: 70%;
	height: 30px; 
	display: block;
	margin: auto;
	margin-top: 50px;
	margin-bottom: 50px;
	padding: 0;
}

.randomNews div:hover {}

.randomNews div {
	padding: 10px;
	border-radius: 4px;
	transition: 0.3s;
}

.card {
	display: grid;
	grid-gap: 1em;
	grid-template-columns: 33% auto;
	width: 100%;
	margin-top: 2em;
	margin-bottom: 2em;
	overflow: hidden;
	height: 200px;
}

.card img {
	height: auto;
	width: 305%;
	grid-column-start: 1;
	grid-column-end: 2;
}

.carddetails {
	grid-column-start: 2;
	grid-column-end: 3;
	overflow: hidden;
	padding-right: 20px;
	padding-top: 9px;
	padding-left: 15px;
	padding-bottom: 15px;
	background-color: rgba(0, 0, 0, 0.9);
}

.carddetails h3 {
	margin-top: 0;
	margin-bottom: 0;
	text-transform: uppercase;
	max-height: 51px;
	overflow: hidden;
}

.carddetails h3 a {
	text-decoration: none;
	font-size: 1.1em;
}

.carddetails h3 a:hover {
}

.carddetails p {
	font-size: 1em;
	margin-bottom: 0;
	margin-top: 10px;
	overflow: hidden;
}

.carddetails a {
	font-size: 0.7em;
}

footer {
	width: 100%;
	text-align: center;
	background-color: #1f1f1f;
	height: 18vw;
	color: #FFFFFF;
	padding-top: 4vw;
	font-size: 2.5vw;
	border-top: solid;
	border-color: #ff5757;
	border-width: 1.5vw;
	line-height: 5vw;
}

footer a {
	color: #FFFFFF;
	padding: 1vw;
}

footer a:hover {
	color: #ff5757;
}

.article {
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: auto;
}

.article h1 {
	font-family: 'Oswald', sans-serif;
	margin: 0;
	margin-bottom: 3vw;
	text-transform: uppercase;
}

.article .related h2 {
	margin: 0;
	margin-bottom: 1vw;
}

.article .thumb {
	width: 100%;
	height: auto;
	margin-bottom: 3vw;
	overflow: hidden;
}

.article .thumb img{
	width: 100%;
}

.article .authdate {
	font-size: 2.5vw;
	font-family: 'Oswald', sans-serif;
	margin-bottom: 3vw;
}

.article .content {
	margin-bottom: 3vw;
}

.article .related {
	display: flex;
	flex-direction: column;
	margin-bottom: 3vw;
}

.article .related a {
	margin-bottom: 1vw;
	font-size: 1.2em;
	font-weight: bold;
}

.article span {
	width: 100%;
	text-align: center;
	margin-top: 5vw;
	margin-bottom: 2vw;
}
/* ... */

